2010-02-17 Tomas Kramar, version 0.1.0
  * initial release

2010-02-20 Tomas Kramar, version 0.1.1
  * XML special characters are properly escaped. If your template data
	contained '<', '>' or '&', the document generated by previous version would be
	invalid. The characters are now escaped to '&lt;', '&gt;' and '&apos;'
  * minor test refactoring

2010-03-30 Thomas Ritz
  * Support changes in the header
  * new matcher "contain_in"